--- a/app/src/main/res/layout/record_tutor_session.xml
+++ b/app/src/main/res/layout/record_tutor_session.xml
@@ -47,6 +47,11 @@
         android:layout_height="wrap_content"
         android:text="@string/submit" />
 
+    <TextView
+        android:id="@+id/text_view"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent" />
+
 </LinearLayout>
 
 </ScrollView>
