--- a/app/src/main/res/layout/new_tutor.xml
+++ b/app/src/main/res/layout/new_tutor.xml
@@ -3,14 +3,12 @@
     android:layout_width="fill_parent">
 
 <LinearLayout
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".MyActivity"
     android:orientation="vertical">
 
     <EditText
@@ -51,6 +49,11 @@
         android:id="@+id/text_view"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent" />
+
+    <FrameLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/new_tutor_frame_container"></FrameLayout>
 
 </LinearLayout>
 
