--- a/app/src/main/res/layout/roster.xml
+++ b/app/src/main/res/layout/roster.xml
@@ -14,4 +14,9 @@
         android:layout_height="wrap_content"
         android:id="@+id/roster_entry"/>
 
+    <FrameLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/roster_frame_container"></FrameLayout>
+
 </LinearLayout>
