--- a/app/src/main/res/layout/tab.xml
+++ b/app/src/main/res/layout/tab.xml
@@ -4,6 +4,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
 
+    <FrameLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/tab_frame_container"></FrameLayout>
+
     <TextView
         android:id="@+id/tabtextview"
         android:layout_width="wrap_content"
