--- a/app/src/main/res/layout/tna_header.xml
+++ b/app/src/main/res/layout/tna_header.xml
@@ -5,10 +5,10 @@
     <!-- title -->
     <TextView
         android:id="@+id/header"
-        android:layout_width="wrap_content"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:gravity="center_vertical"
-        android:textSize="16dp"
+        android:textSize="30dp"
         android:layout_marginLeft="12dp"
         android:layout_marginBottom="4dp"
         android:layout_alignParentBottom="true" />
