--- a/app/src/main/res/layout/tna_target.xml
+++ b/app/src/main/res/layout/tna_target.xml
@@ -5,11 +5,11 @@
     <!--training-->
     <TextView
         android:id="@+id/item_title"
-        android:layout_width="wrap_content"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_toRightOf="@+id/item_icon"
         android:layout_alignBaseline="@+id/item_counter"
-        android:textSize="18dp" />
+        android:textSize="24dp" />
 
         <!-- counter -->
         <TextView
