--- a/app/src/main/res/menu/my.xml
+++ b/app/src/main/res/menu/my.xml
@@ -13,5 +13,10 @@
         android:orderInCategory="100"
         android:showAsAction="ifRoom" />
 
+    <item android:id="@+id/TNA"
+        android:title="@string/TNA"
+        android:orderInCategory="100"
+        android:showAsAction="ifRoom"/>
+
 
 </menu>
