--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,6 +3,19 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="android:Theme.Holo.Light.DarkActionBar">
         <!-- Customize your theme here. -->
+        <item name="android:layout_width"> fill_parent</item>
+        <item name="android:layout_height"> fill_parent</item>
+        <item name="android:textColor">#ff000000</item>
+        <item name="android:background">#E7DDFF</item>
+        <item name="android:textSize">24dp</item>
+    </style>
+
+    <style name="ActionBar" parent="android:Widget.Holo.Light.ActionBar">
+        <item name="android:layout_width">fill_parent</item>
+        <item name="android:layout_height">fill_parent</item>
+        <item name="android:background">#E7DDFF</item>
+        <item name="android:textColor">#ff000000</item>
+        <item name="android:textSize">30dp</item>
     </style>
 
 </resources>
