fixed textview tna

--- a/app/src/main/res/layout/tna_req_list_item.xml
+++ b/app/src/main/res/layout/tna_req_list_item.xml
@@ -3,4 +3,11 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <TextView
+        android:id="@+id/tna_text_view"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:textColor="#000000"
+        />
+
 </LinearLayout>
