--- a/app/src/main/res/layout/tna_header.xml
+++ b/app/src/main/res/layout/tna_header.xml
@@ -11,7 +11,8 @@
         android:textSize="30dp"
         android:layout_marginLeft="12dp"
         android:layout_marginBottom="4dp"
-        android:layout_alignParentBottom="true" />
+        android:layout_alignParentBottom="true"
+        android:textColor="#000000"/>
 
     <!--  divider -->
     <View
