--- a/app/src/main/res/layout/tutor.xml
+++ b/app/src/main/res/layout/tutor.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -8,23 +8,39 @@
         android:id="@+id/tutor_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="30sp"/>
+        android:gravity="top"
+        android:textSize="25sp"/>
 
     <Button
         android:id="@+id/add_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/add"/>
+        android:text="@string/add"
+        android:layout_below="@id/tutor_name"/>
+
+
+    <TextView
+        android:layout_width="fill_parent"
+        android:layout_below="@id/add_button"
+        android:layout_height="wrap_content"
+        android:id="@+id/add_incompetencies_text_view"
+        android:text="@string/add_more_training"
+        android:textSize="20dp"/>
 
     <ListView
         android:id="@+id/training_list"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"></ListView>
+        android:layout_height="wrap_content"
+        android:layout_below="@id/add_incompetencies_text_view"
+        ></ListView>
 
-        <TextView
-            android:id="@+id/training_needed"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content" />
+    <TextView
+        android:id="@+id/training_needed"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content" />
 
 
-</LinearLayout>
+
+
+
+</RelativeLayout>
